testsuite/tests/dependent/should_fail/BadTelescope5.stderr

BadTelescope5.hs:10:81: error:
    • Expected kind ‘k1’, but ‘d’ has kind ‘Proxy a1’
    • In the second argument of ‘SameKind’, namely ‘d’
      In the type signature:
        bar :: forall a k (b :: k) (c :: Proxy b) (d :: Proxy a).
               Proxy c -> SameKind b d
